--- a/teste.html
+++ b/teste.html
@@ -1,4 +1,5 @@
-<html><head><base href="https://bar-esperanca-fila.firebaseapp.com/?">
+<html lang="pt-BR">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Bar Esperança</title>
